--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="./singleLinkedList/myps.js"></script>
+  <!-- <script src="./singleLinkedList/myps.js"></script> -->
+  <!-- <script src="./doubleLinkedList/doubleLinkedList.js"></script> -->
+  <script src="./stack/stack.js"></script>
+
 </body>
 </html>
