small changes added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <!-- <script src="./singleLinkedList/myps.js"></script> -->
   <!-- <script src="./doubleLinkedList/doubleLinkedList.js"></script> -->
-  <script src="./stack/stack.js"></script>
+  <!-- <script src="./stack/stack.js"></script> -->
+  
+  <script src="./queue/queue.js"></script>
 
 </body>
 </html>
