--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <!-- <script src="./singleLinkedList/myps.js"></script> -->
   <!-- <script src="./doubleLinkedList/doubleLinkedList.js"></script> -->
   <!-- <script src="./stack/stack.js"></script> -->
+  <!-- <script src="./queue/queue.js"></script> -->
+  <script src="./BinarySearchTree/BinarySearchTree.js"></script>
   
-  <script src="./queue/queue.js"></script>
 
 </body>
 </html>
