new changfes added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <!-- <script src="./doubleLinkedList/doubleLinkedList.js"></script> -->
   <!-- <script src="./stack/stack.js"></script> -->
   <!-- <script src="./queue/queue.js"></script> -->
-  <script src="./BinarySearchTree/BinarySearchTree.js"></script>
+  <!-- <script src="./BinarySearchTree/BinarySearchTree.js"></script> -->
+  <script src="./HashTable/HashTable.js"></script>
   
 
 </body>
