new changes added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- <script src="./stack/stack.js"></script> -->
   <!-- <script src="./queue/queue.js"></script> -->
   <!-- <script src="./BinarySearchTree/BinarySearchTree.js"></script> -->
-  <script src="./HashTable/HashTable.js"></script>
+  <!-- <script src="./HashTable/HashTable.js"></script> -->
+  <script src="./Graph/Graph.js"></script>
   
 
 </body>
